# kopos_connector

./: .gitignore  Dockerfile.v16-smoke  IMPLEMENTATION_CHECKLIST.md  INDEX.md  INSTALL.md  MANIFEST.in  PROMOTION_SNAPSHOT_FIX_EXECUTION_CHECKLIST.md  PROMOTION_SNAPSHOT_FIX_PLAN.md  QUICK_START.md  README.md  license.txt  patches.txt  pyproject.toml  requirements.txt  setup.py
docs/: FB_MODIFIER_AUTHORING.md  MODIFIER_IMPLEMENTATION_PLAN.md
kopos/: api.py  hooks.py
kopos_connector/: auth.py  hooks.py  live_validation.py  modules.txt  requirements.txt  setup.py  smoke.py  uninstall.py
kopos_connector/api/: __init__.py  catalog.py  devices.py  fb_orders.py  fb_refill.py  fb_remakes.py  fb_returns.py  fb_shifts.py  fb_waste.py  maybank_qr.py  modifier_migration.py  modifiers.py  orders.py  promotions.py  provisioning.py  shifts.py
kopos_connector/install/: __init__.py  install.py  install.py.bak
kopos_connector/kopos/: hooks.py
kopos_connector/patches/: add_order_reference_to_fb_stock_override_log.py  backfill_fb_modifiers_from_kopos.py  normalize_duplicate_device_api_users.py  remove_duplicate_modifier_client_script.py
kopos_connector/tasks/: poll_maybank.py
kopos_connector/tests/: __init__.py  fake_frappe.py  test_catalog_availability.py  test_fb_api_validation_contract.py  test_fb_modifier_backfill.py  test_fb_modifier_qa_scenarios.py  test_modifiers.py  (+5 more)
tests/: fake_frappe.py  test_device_api_elevation.py  test_install_hooks.py  test_maybank_qr.py  test_pos_provisioning.py  test_promotion_review_workflow.py  test_promotion_workflow.py  test_shift_sync.py
(+120 files in other folders)
