[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kopos_connector"
description = "ERPNext v16 connector for KoPOS mobile POS"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "pycryptodome>=3.20.0",
    "jsonschema>=4.0.0",
]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
